new md and notebook 22 and 23 trial

--- a/_notebooks/2023-03-13-AP-unit2-4a.ipynb
+++ b/_notebooks/2023-03-13-AP-unit2-4a.ipynb
@@ -267,12 +267,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created new uid toby\n",
-      "Created new uid niko\n",
-      "Created new uid lex\n",
-      "Created new uid whit\n",
-      "Created new uid indi\n",
-      "Created new uid raven\n"
+      "Records exist uid toby, or error.\n",
+      "Records exist uid niko, or error.\n",
+      "Records exist uid lex, or error.\n",
+      "Records exist uid whit, or error.\n",
+      "Records exist uid indi, or error.\n",
+      "Records exist uid raven, or error.\n"
      ]
     }
    ],
@@ -371,9 +371,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invalid date  require YYYY-mm-dd, date defaulted to 03-15-2023\n",
       "Created\n",
-      " {'id': 7, 'name': '', 'uid': '', 'dob': '03-15-2023', 'age': 0}\n"
+      " {'id': 7, 'name': 'jiya', 'uid': 'jiya', 'dob': '03-07-2005', 'age': 18}\n"
      ]
     }
    ],
@@ -469,7 +468,7 @@
        "  'uid': 'raven',\n",
        "  'dob': '10-21-1921',\n",
        "  'age': 101},\n",
-       " {'id': 7, 'name': '', 'uid': '', 'dob': '03-15-2023', 'age': 0}]"
+       " {'id': 7, 'name': 'jiya', 'uid': 'jiya', 'dob': '03-07-2005', 'age': 18}]"
       ]
      },
      "execution_count": 6,
